@@ -1,6 +1,8 @@
 DIST gamedata-all-1.19a.tgz 3703488 RMD160 3dad3b4b3aa80fb595749a6768376a245db89c12 SHA1 25ce550057c511b5cc2e4372163c0216eac35fcd SHA256 b9b9561b4155bfe3f8005315a7f8f95a567c2ebbcb2a950ad05dcb1702ac68de
 DIST hexen2source-1.4.3.tgz 2173736 RMD160 fd60113c5a6e6406ae21fdc13fa1704103f9ec4a SHA1 152da07cbd14bdaf33d1878851049c66db657363 SHA256 bbb9ffb5380b57be7dd7fecbbd9bba71846f2f17d5614b670e1df13710f7af0d
+DIST hexen2source-1.4.4-pre4.tgz 2327143 RMD160 4f56fcf2f1cac59689e5fad8d7b0d5507ed68f42 SHA1 7b4a177579acde8888f181dcd4e3b855c2d04eac SHA256 10ec0c18b2ac36e2e2bc336ef7ec0f8c2f1acbd3df39687ac079f10f4b23f3ee
 DIST hexenworld-pakfiles-0.15.tgz 4948641 RMD160 bbc3d2368b01d60accf457b42f9ed5d247f94d1b SHA1 a7600b80b4205788b64fb57191e194c28b55b522 SHA256 49462cdf984deee7350d03c7d192d1c34d682647ffc9d06de4308e0a7c71c4d9
 EBUILD uhexen2-1.4.3.ebuild 12815 RMD160 179002c8860860cad875553a5a45612477ae0fa2 SHA1 c7c8be31f46a06f28bc00babad853c794016dd03 SHA256 768deb1e3c618f3e4ecf09f06871464f273a64afbf919970fd700e49289e1ba9
-MISC ChangeLog 2638 RMD160 64ff6bfc7a01677d0951b118b26666c9a6292b3a SHA1 db44a64be87a9e39ba66edcc70788284dfb4ba25 SHA256 acd023f645d07272d22129724a3afed8fb5a5b1d24738a260603d5fd379a8bfd
+EBUILD uhexen2-1.4.4_pre4.ebuild 12592 RMD160 280d20a507c670e796a821f227329c63d1e08a17 SHA1 3d50de21e33318e596a8014196e0e27c80ed63cd SHA256 3c38a9d0f0b5dd7138675519d4e382e2fa4163db7d4b4493d322b343e9dc8bb0
+MISC ChangeLog 2758 RMD160 d1ed979f300ea0332411372ccff1678fab7af8eb SHA1 32beccd67b05d8f807842fe4c2c5f461f0acb85b SHA256 f821aa18fae29ccc76a4b9e5a9dfa6adc1ba17dbf4e3828399ec5f49587ca7ba
 MISC metadata.xml 1145 RMD160 de493008e9d152ce14f697a699c76c2b26a27f0f SHA1 141679fce22f9ade0526683fd3f0c9a3d45affb6 SHA256 21538f19a45e5c7aa5de068e825448a82c41da477576529d2b7bda8b672a761c
